--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             
             <div class="change-mind">
                 <p>Ya3nii mesh 7a7eeell ya gamiiiillll 💕😉</p>
+                <img src="FF.JPG" alt="Baby Farouha" style="width: 200px; border-radius: 50%; border: 4px solid #FF69B4; margin: 15px auto; display: block; box-shadow: 0 4px 15px rgba(255, 105, 180, 0.4);">
                 <button class="btn-no-small" id="btnChangeNo"><b>Yuuukkii Eeeww 😝</b></button>
             </div>
             
